--- a/clusters/production/healthChecks.yaml
+++ b/clusters/production/healthChecks.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   timeout: 2m0s
   healthChecks:
-    - apiVersion: apps/v1
+    - apiVersion: kustomize.toolkit.fluxcd.io/v1
       kind: Kustomization
       name: ingress-nginx
       namespace: flux-system
