--- a/clusters/production/postBuild.yaml
+++ b/clusters/production/postBuild.yaml
@@ -11,6 +11,7 @@ spec:
       TUMO_ZONE: prod # dev | playground | prod
       TUMO_ENVIRONMENT: prod # prod
       NGINX_VERSION: 4.8.3 # https://artifacthub.io/packages/helm/ingress-nginx/ingress-nginx
+      METALLB_VERSION: 0.13.12 # https://artifacthub.io/packages/helm/metallb/metallb
     substituteFrom:
     - kind: ConfigMap
       name: tumo-flux-config
