--- a/clusters/production/kustomization.yaml
+++ b/clusters/production/kustomization.yaml
@@ -10,3 +10,4 @@ patches:
   - path: ./postBuild.yaml
   # - path: ./overlay/third-party/metrics-server/helmRelease.yaml
   - path: ./overlay/third-party/metallb/helmRelease.yaml
+  - path: ./overlay/third-party/metallb/helmRelease.yaml
