--- a/clusters/production/kustomization.yaml
+++ b/clusters/production/kustomization.yaml
@@ -2,12 +2,12 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - flux-system
-# - ../../components/third-party/metrics-server
+- ../../components/third-party/metrics-server
 - ../../components/third-party/metallb
 - ../../components/third-party/ingress-nginx
 - ./overlay/third-party/ingress-nginx/ingress-nginx.yaml
 patches:
   - path: ./postBuild.yaml
-  # - path: ./overlay/third-party/metrics-server/helmRelease.yaml
+  - path: ./overlay/third-party/metrics-server/helmRelease.yaml
   - path: ./overlay/third-party/metallb/helmRelease.yaml
   - path: ./overlay/third-party/metallb/helmRelease.yaml
