--- a/clusters/production/postBuild.yaml
+++ b/clusters/production/postBuild.yaml
@@ -12,6 +12,7 @@ spec:
       TUMO_ENVIRONMENT: prod # prod
       NGINX_VERSION: 4.8.3 # https://artifacthub.io/packages/helm/ingress-nginx/ingress-nginx
       METALLB_VERSION: 0.13.12 # https://artifacthub.io/packages/helm/metallb/metallb
+      METRICS_VERSION: 3.11.0 # https://artifacthub.io/packages/helm/metrics-server/metrics-server
     substituteFrom:
     - kind: ConfigMap
       name: tumo-flux-config
