--- a/clusters/production/kustomization.yaml
+++ b/clusters/production/kustomization.yaml
@@ -5,9 +5,9 @@ resources:
 - ../../components/third-party/metrics-server
 - ../../components/third-party/metallb
 - ../../components/third-party/ingress-nginx
-- ./overlay/third-party/ingress-nginx/ingress-nginx.yaml
+- ../../components/third-party/ingress-nginx
 patches:
   - path: ./postBuild.yaml
   - path: ./overlay/third-party/metrics-server/helmRelease.yaml
   - path: ./overlay/third-party/metallb/helmRelease.yaml
-  - path: ./overlay/third-party/metallb/helmRelease.yaml
+  - path: ./overlay/third-party/ingress-nginx/patches.yaml
