--- a/clusters/production/healthChecks.yaml
+++ b/clusters/production/healthChecks.yaml
@@ -1,12 +1,12 @@
-apiVersion: kustomize.toolkit.fluxcd.io/v1
-kind: Kustomization
-metadata:
-  name: flux-system
-  namespace: flux-system
-spec:
-  timeout: 2m0s
-  healthChecks:
-    - apiVersion: kustomize.toolkit.fluxcd.io/v1
-      kind: Kustomization
-      name: ingress-nginx
-      namespace: flux-system
+# apiVersion: kustomize.toolkit.fluxcd.io/v1
+# kind: Kustomization
+# metadata:
+#   name: flux-system
+#   namespace: flux-system
+# spec:
+#   timeout: 2m0s
+#   healthChecks:
+#     - apiVersion: kustomize.toolkit.fluxcd.io/v1
+#       kind: Kustomization
+#       name: ingress-nginx
+#       namespace: flux-system
