--- a/clusters/production/kustomization.yaml
+++ b/clusters/production/kustomization.yaml
@@ -2,15 +2,16 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - flux-system
-  - ./overlay/third-party/cert-manager
   - ../../components/third-party/cert-manager
   - ../../components/third-party/ingress-nginx
+  - ../../components/third-party/kubed
   - ../../components/third-party/metallb
   - ../../components/third-party/metrics-server
+  - ./overlay/third-party/cert-manager
 patches:
   - path: ./postBuild.yaml
   - path: ./overlay/third-party/cert-manager/patches.yaml
-  # - path: ./overlay/third-party/cert-manager/helmRelease.yaml
   - path: ./overlay/third-party/ingress-nginx/helmRelease.yaml
+  - path: ./overlay/third-party/kubed/helmRelease.yaml
   - path: ./overlay/third-party/metallb/helmRelease.yaml
   - path: ./overlay/third-party/metrics-server/helmRelease.yaml
