--- a/clusters/production/kustomization.yaml
+++ b/clusters/production/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
   - ../../components/third-party/cert-manager
   - ../../components/third-party/ingress-nginx
   - ../../components/third-party/kubed
+  - ../../components/third-party/home-assitant
   - ../../components/third-party/metallb
   - ../../components/third-party/metrics-server
   - ./overlay/third-party/cert-manager
@@ -13,5 +14,6 @@ patches:
   - path: ./overlay/third-party/cert-manager/patches.yaml
   - path: ./overlay/third-party/ingress-nginx/helmRelease.yaml
   - path: ./overlay/third-party/kubed/helmRelease.yaml
+  - path: ./overlay/third-party/home-assitant/helmRelease.yaml
   - path: ./overlay/third-party/metallb/helmRelease.yaml
   - path: ./overlay/third-party/metrics-server/helmRelease.yaml
