--- a/clusters/production/postBuild.yaml
+++ b/clusters/production/postBuild.yaml
@@ -14,6 +14,7 @@ spec:
       METALLB_VERSION: 0.13.12 # https://artifacthub.io/packages/helm/metallb/metallb
       METRICS_VERSION: 3.11.0 # https://artifacthub.io/packages/helm/metrics-server/metrics-server
       CERT_MANAGER_VERSION: 1.13.2 # https://artifacthub.io/packages/helm/cert-manager/cert-manager
+      HOME_ASSISTANT_VERSION: 1.13.2 # https://artifacthub.io/packages/helm/cert-manager/cert-manager
       KUBED_VERSION: 0.13.2 # https://artifacthub.io/packages/helm/appscode/kubed
     substituteFrom:
       - kind: ConfigMap
