--- a/clusters/production/kustomization.yaml
+++ b/clusters/production/kustomization.yaml
@@ -10,6 +10,7 @@ resources:
   - ../../components/third-party/metrics-server
   - ../../components/third-party/mosquitto
   - ./overlay/third-party/cert-manager
+  - ./overlay/third-party/home-assistant
 patches:
   - path: ./postBuild.yaml
   - path: ./overlay/third-party/cert-manager/patches.yaml
