--- a/clusters/production/kustomization.yaml
+++ b/clusters/production/kustomization.yaml
@@ -9,6 +9,7 @@ resources:
   - ../../components/third-party/metallb
   - ../../components/third-party/metrics-server
   - ../../components/third-party/mosquitto
+  - ../../components/third-party/traefik
   - ./overlay/third-party/cert-manager
   - ./overlay/third-party/home-assistant
 patches:
@@ -20,3 +21,4 @@ patches:
   - path: ./overlay/third-party/metallb/helmRelease.yaml
   - path: ./overlay/third-party/metrics-server/helmRelease.yaml
   - path: ./overlay/third-party/mosquitto/helmRelease.yaml
+  - path: ./overlay/third-party/traefik/helmRelease.yaml
