--- a/clusters/production/kustomization.yaml
+++ b/clusters/production/kustomization.yaml
@@ -13,6 +13,7 @@ resources:
   - ./overlay/third-party/cert-manager
   - ./overlay/third-party/home-assistant
   - ./overlay/third-party/mosquitto
+  - ./overlay/third-party/ingress-nginx
 patches:
   - path: ./postBuild.yaml
   - path: ./overlay/third-party/cert-manager/patches.yaml
