--- a/clusters/production/postBuild.yaml
+++ b/clusters/production/postBuild.yaml
@@ -15,7 +15,8 @@ spec:
       METRICS_VERSION: 3.11.0 # https://artifacthub.io/packages/helm/metrics-server/metrics-server
       CERT_MANAGER_VERSION: 1.13.2 # https://artifacthub.io/packages/helm/cert-manager/cert-manager
       HOME_ASSISTANT_VERSION: 0.5.12
-      MOSQUITTO_VERSION: 1.0.4 # https://artifacthub.io/packages/helm/naps/mosquitto
+      # MOSQUITTO_VERSION: 1.0.4 # https://artifacthub.io/packages/helm/naps/mosquitto
+      MOSQUITTO_VERSION: 11.0.13 # https://artifacthub.io/packages/helm/truecharts/mosquitto
       KUBED_VERSION: 0.13.2 # https://artifacthub.io/packages/helm/appscode/kubed
       TRAEFIK_VERSION: 25.0.0 # https://artifacthub.io/packages/helm/traefik/traefik
       LOCAL_PATH_PROVISIONER_VERSION: 0.0.24 # https://artifacthub.io/packages/helm/containeroo/local-path-provisioner
