--- a/clusters/production/kustomization.yaml
+++ b/clusters/production/kustomization.yaml
@@ -4,7 +4,6 @@ resources:
   - flux-system
   - ../../components/third-party/cert-manager
   - ../../components/third-party/home-assistant
-  - ../../components/third-party/home-assistant-et
   - ../../components/third-party/ingress-nginx
   - ../../components/third-party/kubed
   - ../../components/third-party/kured
@@ -14,12 +13,14 @@ resources:
   - ../../components/third-party/mosquitto
   - ./overlay/third-party/cert-manager
   - ./overlay/third-party/home-assistant
+  - ./overlay/third-party/home-assistant-et
   - ./overlay/third-party/ingress-nginx
   - ./overlay/third-party/mosquitto
 patches:
   - path: ./postBuild.yaml
   - path: ./overlay/third-party/cert-manager/patches.yaml
   - path: ./overlay/third-party/home-assistant/helmRelease.yaml
+  - path: ./overlay/third-party/home-assistant-et/helmRelease.yaml
   - path: ./overlay/third-party/ingress-nginx/helmRelease.yaml
   - path: ./overlay/third-party/kubed/helmRelease.yaml
   - path: ./overlay/third-party/kured/helmRelease.yaml
