--- a/clusters/production/kustomization.yaml
+++ b/clusters/production/kustomization.yaml
@@ -8,6 +8,7 @@ resources:
   - ../../components/third-party/kubed
   - ../../components/third-party/kured
   - ../../components/third-party/local-path-provisioner
+  - ../../components/third-party/nfs-subdir-external-provisioner
   - ../../components/third-party/metallb
   - ../../components/third-party/metrics-server
   - ../../components/third-party/mosquitto
@@ -24,6 +25,7 @@ patches:
   - path: ./overlay/third-party/kubed/helmRelease.yaml
   - path: ./overlay/third-party/kured/helmRelease.yaml
   - path: ./overlay/third-party/local-path-provisioner/helmRelease.yaml
+  - path: ./overlay/third-party/nfs-subdir-external-provisioner/helmRelease.yaml
   - path: ./overlay/third-party/metallb/helmRelease.yaml
   - path: ./overlay/third-party/metrics-server/helmRelease.yaml
   - path: ./overlay/third-party/mosquitto/helmRelease.yaml
