--- a/clusters/production/kustomization.yaml
+++ b/clusters/production/kustomization.yaml
@@ -11,15 +11,19 @@ resources:
   - ../../components/third-party/metallb
   - ../../components/third-party/metrics-server
   - ../../components/third-party/mosquitto
+  - ../../components/third-party/mysql
   - ./overlay/third-party/cert-manager
+  # - ./overlay/third-party/grafana
   - ./overlay/third-party/home-assistant
   - ./overlay/third-party/home-assistant-et
   - ./overlay/third-party/ingress-nginx
   - ./overlay/third-party/mosquitto
+  - ./overlay/third-party/mysql
 patches:
   - path: ./postBuild.yaml
   - path: ./overlay/third-party/cert-manager/patches.yaml
   - path: ./overlay/third-party/democratic-csi/helmRelease.yaml
+  # - path: ./overlay/third-party/grafana/helmRelease.yaml
   - path: ./overlay/third-party/home-assistant/helmRelease.yaml
   - path: ./overlay/third-party/ingress-nginx/helmRelease.yaml
   - path: ./overlay/third-party/kubed/helmRelease.yaml
@@ -27,3 +31,4 @@ patches:
   - path: ./overlay/third-party/metallb/helmRelease.yaml
   - path: ./overlay/third-party/metrics-server/helmRelease.yaml
   - path: ./overlay/third-party/mosquitto/helmRelease.yaml
+  - path: ./overlay/third-party/mysql/helmRelease.yaml
