--- a/clusters/production/postBuild.yaml
+++ b/clusters/production/postBuild.yaml
@@ -12,6 +12,7 @@ spec:
       TUMO_ENVIRONMENT: prod # prod
       CERT_MANAGER_VERSION: 1.13.2 # https://artifacthub.io/packages/helm/cert-manager/cert-manager
       DEMOCRATIC_CSI_VERSION: 0.14.2 # https://artifacthub.io/packages/helm/democratic-csi/democratic-csi
+      GRAFANA_VERSION: 7.0.11 # https://artifacthub.io/packages/helm/grafana/grafana
       HOME_ASSISTANT_VERSION: 0.5.12 # https://artifacthub.io/packages/helm/alekc/home-assistant
       KUBED_VERSION: 0.13.2 # https://artifacthub.io/packages/helm/appscode/kubed
       KURED_VERSION: 5.3.1 # https://artifacthub.io/packages/helm/kured/kured
@@ -19,6 +20,7 @@ spec:
       METRICS_VERSION: 3.11.0 # https://artifacthub.io/packages/helm/metrics-server/metrics-server
       MOSQUITTO_VERSION: 11.0.13 # https://artifacthub.io/packages/helm/truecharts/mosquitto
       NGINX_VERSION: 4.8.3 # https://artifacthub.io/packages/helm/ingress-nginx/ingress-nginx
+      MYSQL_VERSION: 9.16.1 # https://artifacthub.io/packages/helm/bitnami/mysql
     substituteFrom:
       - kind: ConfigMap
         name: tumo-flux-config
