--- a/clusters/production/kustomization.yaml
+++ b/clusters/production/kustomization.yaml
@@ -8,6 +8,7 @@ resources:
   - ../../components/third-party/home-assistant
   - ../../components/third-party/ingress-nginx
   - ../../components/third-party/kubed
+  - ../../components/third-party/kube-prometheus-stack
   - ../../components/third-party/kured
   - ../../components/third-party/metallb
   - ../../components/third-party/metrics-server
@@ -27,6 +28,7 @@ patches:
   - path: ./overlay/third-party/home-assistant/helmRelease.yaml
   - path: ./overlay/third-party/ingress-nginx/helmRelease.yaml
   - path: ./overlay/third-party/kubed/helmRelease.yaml
+  - path: ./overlay/third-party/kube-prometheus-stack/helmRelease.yaml
   - path: ./overlay/third-party/kured/helmRelease.yaml
   - path: ./overlay/third-party/metallb/helmRelease.yaml
   - path: ./overlay/third-party/metrics-server/helmRelease.yaml
