--- a/clusters/production/postBuild.yaml
+++ b/clusters/production/postBuild.yaml
@@ -16,6 +16,7 @@ spec:
       HOME_ASSISTANT_VERSION: 0.5.12 # https://artifacthub.io/packages/helm/alekc/home-assistant
       KUBED_VERSION: 0.13.2 # https://artifacthub.io/packages/helm/appscode/kubed
       KURED_VERSION: 5.3.1 # https://artifacthub.io/packages/helm/kured/kured
+      PROMETHEUS_VERSION: 55.0.0 # https://artifacthub.io/packages/helm/prometheus-community/kube-prometheus-stack
       METALLB_VERSION: 0.13.12 # https://artifacthub.io/packages/helm/metallb/metallb
       METRICS_VERSION: 3.11.0 # https://artifacthub.io/packages/helm/metrics-server/metrics-server
       MOSQUITTO_VERSION: 11.0.13 # https://artifacthub.io/packages/helm/truecharts/mosquitto
