--- a/clusters/production/postBuild.yaml
+++ b/clusters/production/postBuild.yaml
@@ -14,14 +14,15 @@ spec:
       DEMOCRATIC_CSI_VERSION: 0.14.2 # https://artifacthub.io/packages/helm/democratic-csi/democratic-csi
       GRAFANA_VERSION: 7.0.11 # https://artifacthub.io/packages/helm/grafana/grafana
       HOME_ASSISTANT_VERSION: 0.5.12 # https://artifacthub.io/packages/helm/alekc/home-assistant
+      INFLUXDB_VERSION: 5.11.3 # https://artifacthub.io/packages/helm/bitnami/influxdb
       KUBED_VERSION: 0.13.2 # https://artifacthub.io/packages/helm/appscode/kubed
       KURED_VERSION: 5.3.1 # https://artifacthub.io/packages/helm/kured/kured
-      PROMETHEUS_VERSION: 55.0.0 # https://artifacthub.io/packages/helm/prometheus-community/kube-prometheus-stack
       METALLB_VERSION: 0.13.12 # https://artifacthub.io/packages/helm/metallb/metallb
       METRICS_VERSION: 3.11.0 # https://artifacthub.io/packages/helm/metrics-server/metrics-server
       MOSQUITTO_VERSION: 0.1.16 # https://github.com/sondresjolyst/tumo-helm-charts
-      NGINX_VERSION: 4.8.3 # https://artifacthub.io/packages/helm/ingress-nginx/ingress-nginx
       MYSQL_VERSION: 9.16.1 # https://artifacthub.io/packages/helm/bitnami/mysql
+      NGINX_VERSION: 4.8.3 # https://artifacthub.io/packages/helm/ingress-nginx/ingress-nginx
+      PROMETHEUS_VERSION: 55.0.0 # https://artifacthub.io/packages/helm/prometheus-community/kube-prometheus-stack
     substituteFrom:
       - kind: ConfigMap
         name: tumo-flux-config
