--- a/clusters/production/postBuild.yaml
+++ b/clusters/production/postBuild.yaml
@@ -19,6 +19,7 @@ spec:
       KURED_VERSION: 5.3.2 # https://artifacthub.io/packages/helm/kured/kured
       METALLB_VERSION: 0.13.12 # https://artifacthub.io/packages/helm/metallb/metallb
       METRICS_VERSION: 3.11.0 # https://artifacthub.io/packages/helm/metrics-server/metrics-server
+      # MOSQUITTO_VERSION: 0.1.16 # https://github.com/sondresjolyst/tumo-helm-charts
       MOSQUITTO_VERSION: 0.1.16 # https://github.com/sondresjolyst/tumo-helm-charts
       MYSQL_VERSION: 9.16.2 # https://artifacthub.io/packages/helm/bitnami/mysql
       NGINX_VERSION: 4.9.0 # https://artifacthub.io/packages/helm/ingress-nginx/ingress-nginx
