--- a/clusters/production/postBuild.yaml
+++ b/clusters/production/postBuild.yaml
@@ -19,8 +19,7 @@ spec:
       KURED_VERSION: 5.3.2 # https://artifacthub.io/packages/helm/kured/kured
       METALLB_VERSION: 0.13.12 # https://artifacthub.io/packages/helm/metallb/metallb
       METRICS_VERSION: 3.11.0 # https://artifacthub.io/packages/helm/metrics-server/metrics-server
-      # MOSQUITTO_VERSION: 0.1.16 # https://github.com/sondresjolyst/tumo-helm-charts
-      MOSQUITTO_VERSION: 0.1.16 # https://github.com/sondresjolyst/tumo-helm-charts
+      MOSQUITTO_VERSION: 13.1.7 # https://github.com/truecharts/charts/blob/master/charts/stable/mosquitto/Chart.yaml
       MYSQL_VERSION: 9.16.2 # https://artifacthub.io/packages/helm/bitnami/mysql
       NGINX_VERSION: 4.9.0 # https://artifacthub.io/packages/helm/ingress-nginx/ingress-nginx
       PROMETHEUS_VERSION: 55.8.2 # https://artifacthub.io/packages/helm/prometheus-community/kube-prometheus-stack
