--- a/.github/workflows/check-version.yaml
+++ b/.github/workflows/check-version.yaml
@@ -33,9 +33,13 @@ jobs:
           PR_BRANCH_TEMP="automatic-version-update"
           PR_NAME_TEMP="Automatic Pull Request"
           destinationCluster="${{ inputs.destinationCluster }}"
+
+          if [ -z $destinationCluster ]; then
+            destinationCluster="production"
+          fi
+
           echo "PR_BRANCH=${PR_BRANCH_TEMP}-${destinationCluster}" >> $GITHUB_ENV
           echo "PR_NAME=${PR_NAME_TEMP} - ${destinationCluster}" >> $GITHUB_ENV
-
       - name: Check version
         id: checkversion
         env:
