--- a/clusters/production/kustomization.yaml
+++ b/clusters/production/kustomization.yaml
@@ -18,6 +18,7 @@ resources:
   - ../../components/third-party/mosquitto
   - ../../components/third-party/mysql
   - ../../components/third-party/telegraf
+  - ../../components/third-party/wordpress
   - ./overlay/third-party/cert-manager
   - ./overlay/third-party/grav
   - ./overlay/third-party/home-assistant
@@ -44,3 +45,4 @@ patches:
   - path: ./overlay/third-party/mosquitto/helmRelease.yaml
   - path: ./overlay/third-party/mysql/helmRelease.yaml
   - path: ./overlay/third-party/telegraf/helmRelease.yaml
+  - path: ./overlay/third-party/wordpress/helmRelease.yaml
