--- a/clusters/production/kustomization.yaml
+++ b/clusters/production/kustomization.yaml
@@ -35,6 +35,7 @@ patches:
   - path: ./overlay/third-party/grafana/helmRelease.yaml
   # - path: ./overlay/third-party/grav/helmRelease.yaml
   - path: ./overlay/third-party/home-assistant/helmRelease.yaml
+  - path: ./overlay/third-party/home-assistant-et/helmRelease.yaml
   - path: ./overlay/third-party/influxdb/helmRelease.yaml
   - path: ./overlay/third-party/ingress-nginx/helmRelease.yaml
   - path: ./overlay/third-party/kube-prometheus-stack/helmRelease.yaml
