chore: add postgresql

--- a/clusters/production/kustomization.yaml
+++ b/clusters/production/kustomization.yaml
@@ -18,6 +18,7 @@ resources:
   - ../../components/third-party/minecraft
   - ../../components/third-party/mosquitto
   - ../../components/third-party/mysql
+  - ../../components/third-party/postgresql
   - ../../components/third-party/telegraf
   # - ../../components/third-party/wordpress
   - ./overlay/third-party/cert-manager
@@ -28,6 +29,7 @@ resources:
   - ./overlay/third-party/ingress-nginx
   - ./overlay/third-party/mosquitto
   - ./overlay/third-party/mysql
+  - ./overlay/third-party/postgresql
   # - ./overlay/third-party/wordpress
 patches:
   - path: ./postBuild.yaml
@@ -48,5 +50,6 @@ patches:
   - path: ./overlay/third-party/minecraft-hs/helmRelease.yaml
   - path: ./overlay/third-party/mosquitto/helmRelease.yaml
   - path: ./overlay/third-party/mysql/helmRelease.yaml
+  - path: ./overlay/third-party/postgresql/helmRelease.yaml
   - path: ./overlay/third-party/telegraf/helmRelease.yaml
   # - path: ./overlay/third-party/wordpress/helmRelease.yaml
