--- a/clusters/production/postBuild.yaml
+++ b/clusters/production/postBuild.yaml
@@ -13,9 +13,12 @@ spec:
       CERT_MANAGER_VERSION: 1.17.1 # https://artifacthub.io/packages/helm/cert-manager/cert-manager
       DEMOCRATIC_CSI_VERSION: 0.14.7 # https://artifacthub.io/packages/helm/democratic-csi/democratic-csi
       DESCHEDULER_VERSION: 0.32.2 # https://artifacthub.io/packages/helm/descheduler/descheduler
+      GARGE_API_VERSION: 0.1.0 # https://github.com/sondresjolyst/garge/releases
+      GARGE_APP_VERSION: 0.1.0 # https://github.com/sondresjolyst/garge/releases
+      GARGE_OPERATOR_VERSION: 0.1.0 # https://github.com/sondresjolyst/garge/releases
       GRAFANA_VERSION: 8.10.1 # https://artifacthub.io/packages/helm/grafana/grafana
-      HOME_ASSISTANT_VERSION: 1.2.0 # https://artifacthub.io/packages/helm/alekc/home-assistant
       HOME_ASSISTANT_VERSION_ET: 1.2.0 # https://artifacthub.io/packages/helm/alekc/home-assistant
+      HOME_ASSISTANT_VERSION: 1.2.0 # https://artifacthub.io/packages/helm/alekc/home-assistant
       INFLUXDB_VERSION: 6.6.0 # https://artifacthub.io/packages/helm/bitnami/influxdb
       KUBED_VERSION: 0.13.2 # https://artifacthub.io/packages/helm/appscode/kubed
       KURED_VERSION: 5.6.1 # https://artifacthub.io/packages/helm/kured/kured
