chore: move garge ing to own file

--- a/clusters/production/kustomization.yaml
+++ b/clusters/production/kustomization.yaml
@@ -25,6 +25,7 @@ resources:
   - ../../components/third-party/garge-operator
   # - ../../components/third-party/wordpress
   - ./overlay/third-party/cert-manager
+  - ./overlay/third-party/garge-app
   # - ./overlay/third-party/grav
   - ./overlay/third-party/home-assistant
   - ./overlay/third-party/home-assistant-et
