--- a/clusters/production/kustomization.yaml
+++ b/clusters/production/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - flux-system
+  - ../../components/third-party/bobby-api
   - ../../components/third-party/cert-manager
   - ../../components/third-party/democratic-csi
   - ../../components/third-party/descheduler
@@ -19,6 +20,7 @@ resources:
   - ../../components/third-party/mosquitto
   - ../../components/third-party/mysql
   - ../../components/third-party/telegraf
+  - ../../components/third-party/tumogroup
   - ../../components/third-party/garge
   - ../../components/third-party/garge-api
   - ../../components/third-party/garge-app
@@ -36,6 +38,7 @@ resources:
   # - ./overlay/third-party/wordpress
 patches:
   - path: ./postBuild.yaml
+  - path: ./overlay/third-party/bobby-api/helmRelease.yaml
   - path: ./overlay/third-party/cert-manager/patches.yaml
   - path: ./overlay/third-party/democratic-csi/helmRelease.yaml
   - path: ./overlay/third-party/descheduler/helmRelease.yaml
