--- a/clusters/production/postBuild.yaml
+++ b/clusters/production/postBuild.yaml
@@ -10,6 +10,7 @@ spec:
       FLUX_CONFIG_PATH: ./clusters/production
       TUMO_ZONE: prod # dev | playground | prod
       TUMO_ENVIRONMENT: prod # prod
+      BOBBY_API_VERSION: 1.0.0 # https://artifacthub.io/packages/helm/tumogroup/bobby-api
       CERT_MANAGER_VERSION: 1.17.2 # https://artifacthub.io/packages/helm/cert-manager/cert-manager
       DEMOCRATIC_CSI_VERSION: 0.15.0 # https://artifacthub.io/packages/helm/democratic-csi/democratic-csi
       DESCHEDULER_VERSION: 0.33.0 # https://artifacthub.io/packages/helm/descheduler/descheduler
