--- a/clusters/production/kustomization.yaml
+++ b/clusters/production/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - flux-system
+  - ../../components/third-party/bitnami
   - ../../components/third-party/bobby-api
   - ../../components/third-party/cert-manager
   - ../../components/third-party/democratic-csi
