--- a/clusters/production/kustomization.yaml
+++ b/clusters/production/kustomization.yaml
@@ -39,6 +39,7 @@ resources:
   - ./overlay/third-party/ingress-nginx
   - ./overlay/third-party/mosquitto
   - ./overlay/third-party/mysql
+  - ./overlay/third-party/vault
   # - ./overlay/third-party/wordpress
 patches:
   - path: ./postBuild.yaml
